2012-01-10  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.5.0

2012-01-04  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #33056: Temporarily remove dependency to 'xliff'
	* [TASK] Update copyright year
	* [BUGFIX][SECURITY] Fix potential XSS issue

2011-11-11  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #31747: Add postal office box in default template
	* [FEATURE] #31764: Prices should show the corresponding form name

2011-11-10  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.3
	* [BUGFIX] #31728: Exception when using custom form URLs in Dir
	* [TASK][DOC] Update list of TypoScript configuration properties

2011-11-09  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.2
	* [TASK][1.5] Add missing TypoScript for finding nearest organization
	* [TASK][DOC] Update ChangeLog section
	* [BUGFIX] #31689: Incompatibility between WS v1 and WS v2

2011-11-08  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE][1.5] Add smaller loading animation in front of the dropdown lists
	* [FEATURE][1.5] Add Google Map
	* [TASK][DOC] Update RELEASE_NOTES
	* [TASK][1.5] Change dependency on 'xliff' to a suggestion instead
	* [TASK][1.5] Integrate AJAX loading mask
	* [TASK][1.5] Refactor selector.js

2011-11-06  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.1

2011-10-26  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #31313: Prices are not rendered correctly

2011-10-25  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove translation files (now managed on http://translation.typo3.org)

2011-10-19  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX][1.5] XLIFF files should contain the flag xml:space="preserve"

2011-10-18  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][1.5] #31066: English XLIFF files should not contain target element

2011-10-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Get rid of phantom chapter at the end of the document